tests/ui/pattern/usefulness/empty-types.min_exh_pats.stderr
error: unreachable pattern
  --> $DIR/empty-types.rs:51:9
   |
LL |         _ => {}
   |         ^
   |
note: the lint level is defined here
  --> $DIR/empty-types.rs:17:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:54:9
   |
LL |         _x => {}
   |         ^^

error[E0004]: non-exhaustive patterns: type `&!` is non-empty
  --> $DIR/empty-types.rs:58:11
   |
LL |     match ref_never {}
   |           ^^^^^^^^^
   |
   = note: the matched value is of type `&!`
   = note: references are always considered inhabited
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match ref_never {
LL +         _ => todo!(),
LL +     }
   |

error: unreachable pattern
  --> $DIR/empty-types.rs:73:9
   |
LL |         (_, _) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:80:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:83:9
   |
LL |         (_, _) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:87:9
   |
LL |         _ => {}
   |         ^

error[E0004]: non-exhaustive patterns: `Ok(_)` not covered
  --> $DIR/empty-types.rs:91:11
   |
LL |     match res_u32_never {}
   |           ^^^^^^^^^^^^^ pattern `Ok(_)` not covered
   |
note: `Result<u32, !>` defined here
  --> $SRC_DIR/core/src/result.rs:LL:COL
  ::: $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Result<u32, !>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~     match res_u32_never {
LL +         Ok(_) => todo!(),
LL +     }
   |

error: unreachable pattern
  --> $DIR/empty-types.rs:99:9
   |
LL |         Err(_) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:104:9
   |
LL |         Err(_) => {}
   |         ^^^^^^

error[E0004]: non-exhaustive patterns: `Ok(1_u32..=u32::MAX)` not covered
  --> $DIR/empty-types.rs:101:11
   |
LL |     match res_u32_never {
   |           ^^^^^^^^^^^^^ pattern `Ok(1_u32..=u32::MAX)` not covered
   |
note: `Result<u32, !>` defined here
  --> $SRC_DIR/core/src/result.rs:LL:COL
  ::: $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Result<u32, !>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Err(_) => {},
LL ~         Ok(1_u32..=u32::MAX) => todo!()
   |

error[E0005]: refutable pattern in local binding
  --> $DIR/empty-types.rs:108:9
   |
LL |     let Ok(_x) = res_u32_never.as_ref();
   |         ^^^^^^ pattern `Err(_)` not covered
   |
   = note: `let` bindings require an "irrefutable pattern", like a `struct` or an `enum` with only one variant
   = note: for more information, visit https://doc.rust-lang.org/book/ch18-02-refutability.html
   = note: the matched value is of type `Result<&u32, &!>`
help: you might want to use `let else` to handle the variant that isn't matched
   |
LL |     let Ok(_x) = res_u32_never.as_ref() else { todo!() };
   |                                         ++++++++++++++++

error[E0005]: refutable pattern in local binding
  --> $DIR/empty-types.rs:112:9
   |
LL |     let Ok(_x) = &res_u32_never;
   |         ^^^^^^ pattern `&Err(_)` not covered
   |
   = note: `let` bindings require an "irrefutable pattern", like a `struct` or an `enum` with only one variant
   = note: for more information, visit https://doc.rust-lang.org/book/ch18-02-refutability.html
   = note: the matched value is of type `&Result<u32, !>`
help: you might want to use `let else` to handle the variant that isn't matched
   |
LL |     let Ok(_x) = &res_u32_never else { todo!() };
   |                                 ++++++++++++++++

error: unreachable pattern
  --> $DIR/empty-types.rs:119:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:123:9
   |
LL |         Ok(_) => {}
   |         ^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:126:9
   |
LL |         Ok(_) => {}
   |         ^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:127:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:130:9
   |
LL |         Ok(_) => {}
   |         ^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:131:9
   |
LL |         Err(_) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:140:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:143:13
   |
LL |             _ if false => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:152:13
   |
LL |             Some(_) => {}
   |             ^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:156:13
   |
LL |             _ => {}
   |             ^

error[E0004]: non-exhaustive patterns: `Some(_)` not covered
  --> $DIR/empty-types.rs:165:15
   |
LL |         match *ref_opt_void {
   |               ^^^^^^^^^^^^^ pattern `Some(_)` not covered
   |
note: `Option<Void>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Option<Void>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~             None => {},
LL +             Some(_) => todo!()
   |

error: unreachable pattern
  --> $DIR/empty-types.rs:208:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:213:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:218:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:223:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:229:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/empty-types.rs:288:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:291:9
   |
LL |         (_, _) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:294:9
   |
LL |         Ok(_) => {}
   |         ^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:295:9
   |
LL |         Err(_) => {}
   |         ^^^^^^

error[E0004]: non-exhaustive patterns: type `(u32, !)` is non-empty
  --> $DIR/empty-types.rs:316:11
   |
LL |     match *x {}
   |           ^^
   |
   = note: the matched value is of type `(u32, !)`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match *x {
LL +         _ => todo!(),
LL ~     }
   |

error[E0004]: non-exhaustive patterns: type `(!, !)` is non-empty
  --> $DIR/empty-types.rs:318:11
   |
LL |     match *x {}
   |           ^^
   |
   = note: the matched value is of type `(!, !)`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match *x {
LL +         _ => todo!(),
LL ~     }
   |

error[E0004]: non-exhaustive patterns: `Ok(_)` and `Err(_)` not covered
  --> $DIR/empty-types.rs:320:11
   |
LL |     match *x {}
   |           ^^ patterns `Ok(_)` and `Err(_)` not covered
   |
note: `Result<!, !>` defined here
  --> $SRC_DIR/core/src/result.rs:LL:COL
  ::: $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: not covered
  ::: $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Result<!, !>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~     match *x {
LL +         Ok(_) | Err(_) => todo!(),
LL ~     }
   |

error[E0004]: non-exhaustive patterns: type `[!; 3]` is non-empty
  --> $DIR/empty-types.rs:322:11
   |
LL |     match *x {}
   |           ^^
   |
   = note: the matched value is of type `[!; 3]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match *x {
LL +         _ => todo!(),
LL ~     }
   |

error[E0004]: non-exhaustive patterns: type `&[!]` is non-empty
  --> $DIR/empty-types.rs:327:11
   |
LL |     match slice_never {}
   |           ^^^^^^^^^^^
   |
   = note: the matched value is of type `&[!]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match slice_never {
LL +         _ => todo!(),
LL +     }
   |

error[E0004]: non-exhaustive patterns: `&[_, ..]` not covered
  --> $DIR/empty-types.rs:329:11
   |
LL |     match slice_never {
   |           ^^^^^^^^^^^ pattern `&[_, ..]` not covered
   |
   = note: the matched value is of type `&[!]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         [] => {},
LL +         &[_, ..] => todo!()
   |

error[E0004]: non-exhaustive patterns: `&[]`, `&[_]` and `&[_, _]` not covered
  --> $DIR/empty-types.rs:338:11
   |
LL |     match slice_never {
   |           ^^^^^^^^^^^ patterns `&[]`, `&[_]` and `&[_, _]` not covered
   |
   = note: the matched value is of type `&[!]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~         [_, _, _, ..] => {},
LL +         &[] | &[_] | &[_, _] => todo!()
   |

error[E0004]: non-exhaustive patterns: `&[]` and `&[_, ..]` not covered
  --> $DIR/empty-types.rs:352:11
   |
LL |     match slice_never {
   |           ^^^^^^^^^^^ patterns `&[]` and `&[_, ..]` not covered
   |
   = note: the matched value is of type `&[!]`
   = note: match arms with guards don't count towards exhaustivity
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~         &[..] if false => {},
LL +         &[] | &[_, ..] => todo!()
   |

error[E0004]: non-exhaustive patterns: type `[!]` is non-empty
  --> $DIR/empty-types.rs:359:11
   |
LL |     match *slice_never {}
   |           ^^^^^^^^^^^^
   |
   = note: the matched value is of type `[!]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match *slice_never {
LL +         _ => todo!(),
LL +     }
   |

error: unreachable pattern
  --> $DIR/empty-types.rs:369:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:372:9
   |
LL |         [_, _, _] => {}
   |         ^^^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:375:9
   |
LL |         [_, ..] => {}
   |         ^^^^^^^

error[E0004]: non-exhaustive patterns: type `[!; 0]` is non-empty
  --> $DIR/empty-types.rs:389:11
   |
LL |     match array_0_never {}
   |           ^^^^^^^^^^^^^
   |
   = note: the matched value is of type `[!; 0]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match array_0_never {
LL +         _ => todo!(),
LL +     }
   |

error: unreachable pattern
  --> $DIR/empty-types.rs:396:9
   |
LL |         _ => {}
   |         ^

error[E0004]: non-exhaustive patterns: `[]` not covered
  --> $DIR/empty-types.rs:398:11
   |
LL |     match array_0_never {
   |           ^^^^^^^^^^^^^ pattern `[]` not covered
   |
   = note: the matched value is of type `[!; 0]`
   = note: match arms with guards don't count towards exhaustivity
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         [..] if false => {},
LL +         [] => todo!()
   |

error: unreachable pattern
  --> $DIR/empty-types.rs:417:9
   |
LL |         Some(_) => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:422:9
   |
LL |         Some(_a) => {}
   |         ^^^^^^^^

error: unreachable pattern
  --> $DIR/empty-types.rs:427:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:432:9
   |
LL |         _a => {}
   |         ^^

error[E0004]: non-exhaustive patterns: `&Some(_)` not covered
  --> $DIR/empty-types.rs:452:11
   |
LL |     match ref_opt_never {
   |           ^^^^^^^^^^^^^ pattern `&Some(_)` not covered
   |
note: `Option<!>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `&Option<!>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         &None => {},
LL +         &Some(_) => todo!()
   |

error[E0004]: non-exhaustive patterns: `Some(_)` not covered
  --> $DIR/empty-types.rs:493:11
   |
LL |     match *ref_opt_never {
   |           ^^^^^^^^^^^^^^ pattern `Some(_)` not covered
   |
note: `Option<!>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Option<!>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         None => {},
LL +         Some(_) => todo!()
   |

error[E0004]: non-exhaustive patterns: `Err(_)` not covered
  --> $DIR/empty-types.rs:541:11
   |
LL |     match *ref_res_never {
   |           ^^^^^^^^^^^^^^ pattern `Err(_)` not covered
   |
note: `Result<!, !>` defined here
  --> $SRC_DIR/core/src/result.rs:LL:COL
  ::: $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Result<!, !>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Ok(_) => {},
LL +         Err(_) => todo!()
   |

error[E0004]: non-exhaustive patterns: `Err(_)` not covered
  --> $DIR/empty-types.rs:552:11
   |
LL |     match *ref_res_never {
   |           ^^^^^^^^^^^^^^ pattern `Err(_)` not covered
   |
note: `Result<!, !>` defined here
  --> $SRC_DIR/core/src/result.rs:LL:COL
  ::: $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Result<!, !>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Ok(_a) => {},
LL +         Err(_) => todo!()
   |

error[E0004]: non-exhaustive patterns: type `(u32, !)` is non-empty
  --> $DIR/empty-types.rs:571:11
   |
LL |     match *ref_tuple_half_never {}
   |           ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the matched value is of type `(u32, !)`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match *ref_tuple_half_never {
LL +         _ => todo!(),
LL +     }
   |

error: unreachable pattern
  --> $DIR/empty-types.rs:604:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:607:9
   |
LL |         _x => {}
   |         ^^

error: unreachable pattern
  --> $DIR/empty-types.rs:610:9
   |
LL |         _ if false => {}
   |         ^

error: unreachable pattern
  --> $DIR/empty-types.rs:613:9
   |
LL |         _x if false => {}
   |         ^^

error[E0004]: non-exhaustive patterns: `&_` not covered
  --> $DIR/empty-types.rs:638:11
   |
LL |     match ref_never {
   |           ^^^^^^^^^ pattern `&_` not covered
   |
   = note: the matched value is of type `&!`
   = note: references are always considered inhabited
   = note: match arms with guards don't count towards exhaustivity
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         &_a if false => {},
LL +         &_ => todo!()
   |

error[E0004]: non-exhaustive patterns: `Ok(_)` not covered
  --> $DIR/empty-types.rs:654:11
   |
LL |     match *ref_result_never {
   |           ^^^^^^^^^^^^^^^^^ pattern `Ok(_)` not covered
   |
note: `Result<!, !>` defined here
  --> $SRC_DIR/core/src/result.rs:LL:COL
  ::: $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Result<!, !>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Err(_) => {},
LL +         Ok(_) => todo!()
   |

error[E0004]: non-exhaustive patterns: `Some(_)` not covered
  --> $DIR/empty-types.rs:674:11
   |
LL |     match *x {
   |           ^^ pattern `Some(_)` not covered
   |
note: `Option<Result<!, !>>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Option<Result<!, !>>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         None => {},
LL +         Some(_) => todo!()
   |

error: aborting due to 64 previous errors

Some errors have detailed explanations: E0004, E0005.
For more information about an error, try `rustc --explain E0004`.
